# napoleon_navigation

./: .gitignore  CMakeLists-old.txt  CMakeLists.txt  NapoleonNavigation.cpp  NapoleonNavigationStandalone.cpp  README.md  main.cpp  package.xml  sample_osm_plans.txt
config/: .NapoleonNavigation.cfg.kate-swp  NapoleonNavigation.cfg  napoleon_navigation_load.yaml  napoleon_navigation_ropod.yaml
include/: .napoleon_config.h.kate-swp  napoleon_config.h  napoleon_driving.h  napoleon_functions.h  napoleon_geometry.h
include-old/classes/: napoleon_action.h  napoleon_action.h.autosave  napoleon_assignment.h  napoleon_model.h  napoleon_model.h.autosave  napoleon_prediction.h.autosave  napoleon_tube.h
include/Communication/: Communication.cpp  Communication.h
include/Definitions/: Circle.h  Ellipse.h  Line.h  Polygon.h  Pose2D.h  Vector2D.h
include/LoopRate/: LoopRate.h
include/Model/: BicycleModel.cpp  BicycleModel.h  HolonomicModel.cpp  HolonomicModel.h  Model.cpp  Model.h
include/Obstacles/: Obstacle.cpp  Obstacle.h  Obstacles.cpp  Obstacles.h
include/Tube/: Tube.cpp  Tube.h  Tubes.cpp  Tubes.h
include/Visualization/: Visualization.cpp  Visualization.h  VisualizationOpenCV.cpp  VisualizationOpenCV.h  VisualizationRviz.cpp  VisualizationRviz.h
include/classes/: napoleon_action.h  napoleon_assignment.h  napoleon_model.h  napoleon_obstacle.h  napoleon_planner.h  napoleon_prediction.h  napoleon_statemachine.h.autosave  napoleon_tube.h  napoleon_visualization.h
launch/: AreaBuilder.launch  gmapping.launch  napoleon_navigation.launch  napoleon_navigation_brsu.launch  napoleon_navigation_corner.launch  napoleon_navigation_custom_hallway.launch  napoleon_navigation_generic_demo_plus_perception.launch  napoleon_navigation_hall_with_obstacle.launch  napoleon_navigation_hallway_corner.launch  napoleon_navigation_hallway_obstacle.launch  napoleon_navigation_hallway_obstacle_small.launch  napoleon_navigation_hallway_obstacle_small2.launch  napoleon_navigation_plus_perception.launch  napoleon_navigation_plus_perception_Gosse.launch  napoleon_navigation_ropod_experiment.launch  napoleon_navigation_tue_plus_perception.launch  napoleon_navigation_use_case1.launch
maps/: custom_hallway.config  custom_hallway.pgm  custom_hallway.sdf  custom_hallway.yaml  custom_hallway2.pgm  hall_with_obstacle.config  hall_with_obstacle.pgm  hall_with_obstacle.sdf  hall_with_obstacle.yaml  hallway_corner.config  hallway_corner.pgm  hallway_corner.sdf  hallway_corner.yaml  use_case1.config  use_case1.pgm  use_case1.sdf  use_case1.yaml
msg/: circleProperties.msg  objPosVel.msg  objsPosVel.msg  rectangleProperties.msg
scripts/: config_switcher
src/: .napoleon_functions.cpp.kate-swp  .napoleon_navigation_rosnode.cpp.kate-swp  NapoleonNavigation.cpp  NapoleonNavigationStandalone.cpp  PointCreator.cpp  napoleon_driving.cpp  napoleon_functions.cpp  napoleon_geometry.cpp  napoleon_navigation_rosnode.cpp  napoleon_navigation_rosnode_local.cpp  pose_plot.m
src-old/: napoleon_functions.cpp  napoleon_geometry.cpp  napoleon_navigation_rosnode.cpp
src-old/classes/: napoleon_action.cpp  napoleon_model.cpp  napoleon_planner.cpp  napoleon_prediction.cpp  napoleon_visualization.cpp
src/classes/: napoleon_assignment.cpp  napoleon_model.cpp  napoleon_model.cpp.autosave  napoleon_obstacle.cpp  napoleon_prediction.cpp  napoleon_visualization.cpp
yaml-cmds/: .topic_napoleon_nav_plan_to_elevator.yaml.kate-swp  napoleon_nav_plan_short.yaml  napoleon_nav_plan_to_elevator.yaml  napoleon_nav_plan_to_hochschulestrasse.yaml  napoleon_nav_test_plan.yaml  social_nav_experiment.yaml  topic_ElevatorClockwise.yaml  topic_ElevatorCounterClockWise.yaml  topic_ElevatorCounterClockwise.yaml  topic_ElevatorToFieldPlan.yaml  topic_ElevatorToFieldPlan_smalldoors.yaml  topic_ElevatorToFieldPlansmall.yaml  topic_FieldToAESPlan.yaml  topic_FieldToElevatorPlan.yaml  topic_StraightHallway.yaml  topic_StraightHallway_small.yaml  topic_corner.yaml  topic_custom_hallwayCCW.yaml  topic_custom_hallwayCW.yaml  topic_hall_with_obstacle.yaml  topic_hallway_corner.yaml  topic_hallway_small_corner.yaml  topic_napoleon_nav_generic_demo.yaml  topic_napoleon_nav_generic_demo2.yaml  topic_napoleon_nav_plan_short.yaml  topic_napoleon_nav_plan_to_elevator.yaml  topic_napoleon_nav_plan_to_hochschulestrasse.yaml  topic_use_case1.yaml  topoc_ElevatorClockwise.yaml
